--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -336,7 +336,7 @@
             .catch(console.error);
         }
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js"></script> <!--Include DOMPurify on sensitive pages so custom alert can use it-->
     <script src="/static/custom-alert.js"></script>
     <script src="static/admin.js"></script>
     <script src="/static/js/notifications.js"></script>
@@ -582,13 +582,13 @@
         }
 
         // Show modal for a given userId
-        async function showUserNotificationModal(userId) {
+        async function showUserNotificationModal(user_id) {
         showNotificationModal({
             onSend: ({ title, message, module }) =>
             fetch(`/admin/notification/user`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ userId, title, message, module })
+                body: JSON.stringify({ user_id, title, message, module })
             }).then(r => r.ok ? r.json() : r.json().then(j => Promise.reject(j)))
         });
         }
