--- a/pythonanywhere/templates/todo.html
+++ b/pythonanywhere/templates/todo.html
@@ -1110,9 +1110,9 @@ document.addEventListener("DOMContentLoaded", async () => {
         localStorage.setItem(proTipKey, "1");
       }
 
-      await fetchTagSuggestions();
+      //await fetchTagSuggestions();
 
-      setupTagDetection();
+      //setupTagDetection();
 
       // Prefill core fields
       document.getElementById('todo-id').value   = data.id || '';
