<i class="fa-sharp fa-solid fa-folder-open"></i>

--- a/pythonanywhere/templates/group_index.html
+++ b/pythonanywhere/templates/group_index.html
@@ -3511,7 +3511,7 @@
             li.className = 'folder-card';
             li.setAttribute('data-folder-id', folder.id);
             li.innerHTML = `
-            <div class="folder-icon">📁</div>
+            <div class="folder-icon"><i class="fa-sharp fa-solid fa-folder-open"></i></div>
             <h3>${escapeHTML(folder.name)}</h3>
             <button class="folder-options-btn" title="Options">⋮</button>
             `;
