--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -2667,7 +2667,7 @@
             li.className = 'folder-card';           // preserve your class
             li.setAttribute('data-folder-id', folder.id); // optional, matches your pattern
             li.innerHTML = `
-            <div class="folder-icon">📁</div>
+            <div class="folder-icon"><i class="fa-sharp fa-solid fa-folder-open"></i></div>
             <h3>${escapeHTML(folder.name)}</h3>
             <button class="folder-options-btn" title="Options">⋮</button>
             `;
