--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -299,7 +299,7 @@
         .notif-modal select {
         width: 100%; padding: 8px; border: 1px solid #ccc;
         border-radius: 3px; box-sizing: border-box;
-        font-size: 1em; color: #2c2c2c; background: #f0f0f0; /* light gray */
+        font-size: 1em; color: #ffffff; background: #f0f0f0; /* light gray */
         background-color: #2c2c2c; /* dark gray */
         }
         .notif-modal textarea {
